# Gassho-Konkuru

./: README.md  pyproject.toml
src/: main.py  midi_notes.py  screen.py
src/data/midi/: tabi.mid
